--- a/project/templates/orders/order_create.html
+++ b/project/templates/orders/order_create.html
@@ -18,17 +18,34 @@
     {% endfor %}
   </ul>
 
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
+  <form method="post" id="order-form" novalidate>
+    {% csrf_token %}
+    <div class="form-group">
+      {{ form.payment_method.label_tag }}
+      {{ form.payment_method }}
+    </div>
 
-  {% for item in items %}
-    <input type="hidden" name="selected_items" value="{{ item.id }}">
-  {% endfor %}
+    <div class="form-group">
+      {{ form.pickup_point.label_tag }}
+      {{ form.pickup_point }}
+    </div>
 
-  <button type="submit">Подтвердить заказ</button>
-</form>
+    {% for item in items %}
+      <input type="hidden" name="selected_items" value="{{ item.id }}">
+    {% endfor %}
+
+    <input type="hidden" name="pickup_point" id="pickup-point-input">
+
+    <button type="submit">Подтвердить заказ</button>
+  </form>
+
+  <h3>Наши пункты выдачи:</h3>
+  <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor:0899d9b405551d611a2c4e2fb48564172cfd225b73647e47218ae39101ad5011&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
 
   <a href="{% url 'cart' %}" class="back-link">⬅ Вернуться в корзину</a>
 </div>
+
+<script>
+
+</script>
 {% endblock %}
