label is_paid was added

--- a/project/templates/orders/order_detail.html
+++ b/project/templates/orders/order_detail.html
@@ -10,6 +10,7 @@
     <p><strong>ПВЗ:</strong> {{ order.pickup_point }}</p>
     <p><strong>Сумма:</strong> {{ order.total_price }} ₽</p>
     <p><strong>Текущий статус:</strong> {{ order.get_status_display }}</p>
+    <p><strong>Оплачен:</strong> {{ order.is_paid }}</p>
 
     <form method="post">
       {% csrf_token %}
