order list page was added

--- a/project/static/css/my_orders.css
+++ b/project/static/css/my_orders.css
@@ -44,3 +44,9 @@
     list-style-type: disc;
     color: #333;
 }
+
+.order-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+  }
