--- a/project/templates/orders/user_orders.html
+++ b/project/templates/orders/user_orders.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'css/my_orders.css' %}">
+<link rel="stylesheet" href="{% static 'css/user_orders.css' %}">
 {% endblock %}
 
 {% block content %}
