--- a/project/templates/orders/order_detail.html
+++ b/project/templates/orders/order_detail.html
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'css/order_detail.css' %}">
+<link rel="stylesheet" href="{% static 'css/pp_order_detail.css' %}">
 {% endblock %}
