--- a/project/templates/orders/cart.html
+++ b/project/templates/orders/cart.html
@@ -18,13 +18,7 @@
                 <input type="checkbox" name="selected_items" value="{{ item.id }}" class="item-checkbox">
                 <span class="checkmark"></span>
             </label>
-
-            {% if item.product.image %}
-                <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="product-image" onerror="this.onerror=null; this.src='{% static 'images/default-preview.jpg' %}'">
-            {% else %}
-                <img src="{% static 'images/default-preview.jpg' %}" alt="{{ item.product.name }}" class="product-image">
-            {% endif %}
-
+            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="product-image" onerror="this.onerror=null; this.src='{% static '/images/default-preview.jpg' %}'">
             <div class="card-details">
                 <h2>{{ item.product.name }}</h2>
                 <p>
