--- a/project/templates/shops/shop_detail.html
+++ b/project/templates/shops/shop_detail.html
@@ -13,7 +13,7 @@
         {% if shop.logo %}
             <img src="{{ shop.logo.url }}" alt="{{ shop.name }}" class="shop-logo">
         {% else %}
-            <img src="{% static 'images/default-logo.jpg' %}" alt="{{ shop.name }}" class="shop-logo">
+            <img src=src="/media/shops/default_shop_logo.jpg" alt="{{ shop.name }}" class="shop-logo">
         {% endif %}
         <div class="shop-info">
             <h1>{{ shop.name }}</h1>
@@ -47,9 +47,9 @@
             {% for product in products %}
                 <div class="product-card">
                     {% if product.image %}
-                        <img src="{{ product.image.url }}" alt="{{ product.name }}" class="product-image" onerror="this.onerror=null; this.src='{% static '/images/default-preview.jpg' %}'">
+                        <img src="{{ product.image.url }}" alt="{{ product.name }}" class="product-image">
                     {% else %}
-                        <img src="/media/products/images/default.jpg" alt="{{ product.name }}" class="product-image">
+                        <img src="/media/products/default_product_image.jpg" alt="{{ product.name }}" class="product-image">
                     {% endif %}
                     <h2 class="product-name">{{ product.name|slice:":15" }}{% if product.name|length > 15 %}...{% endif %}</h2>
                     <p class="product-price">{{ product.price|floatformat:2 }} ₽</p>
