--- a/project/templates/orders/cart.html
+++ b/project/templates/orders/cart.html
@@ -18,7 +18,11 @@
                 <input type="checkbox" name="selected_items" value="{{ item.id }}" class="item-checkbox">
                 <span class="checkmark"></span>
             </label>
-            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="product-image" onerror="this.onerror=null; this.src='{% static '/images/default-preview.jpg' %}'">
+            {% if item.product.image %}
+                <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="product-image">
+            {% else %}
+                <img src="/media/products/default_product_image.jpg" alt="{{ item.product.name }}" class="product-image">
+            {% endif %}
             <div class="card-details">
                 <h2>{{ item.product.name }}</h2>
                 <p>
