--- a/project/static/css/products.css
+++ b/project/static/css/products.css
@@ -18,9 +18,10 @@
 .product-image {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
     margin-bottom: 15px;
+    background-color: white;
 }
 
 .product-name {
@@ -121,3 +122,10 @@
     cursor: default;
 }
 
+body {
+    background-image: url('/static/images/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
