changes in urls, views, model_list - app_admin              uncomment 'app_users.utils.context_processors.user_profile', in settings.py

--- a/project/templates/admin/model_list.html
+++ b/project/templates/admin/model_list.html
@@ -4,9 +4,11 @@
 <h2 class="mb-4">Список {{ model_name }}</h2>
 
 <div class="mb-3">
-    {% if model_slug != "shoprequest" and model_slug != "user" %}
-        <a href="{% url 'app_admin:'|add:model_slug|add:'_create' %}" class="btn btn-success">Добавить</a>
-    {% endif %}
+   {% if can_create %}
+  <a href="{% url 'app_admin:'|add:model_slug|add:'_create' %}" class="btn btn-success">Добавить</a>
+{% endif %}
+
+
     <a href="{% url 'app_admin:dashboard' %}" class="btn btn-secondary">Назад</a>
 </div>
 
