--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -20,7 +20,11 @@
                         <li><a href="{% url 'my-pp' %}">Мой ПВЗ</a></li>
                     {% else %}
                         <li><a href="{% url 'my-orders' %}">Мои заказы</a></li>
-                        <li><a href="{% url 'cart' %}">Корзина</a></li>
+                        <li><a href="{% url 'cart' %}">Корзина
+                            {% if cart_item_count > 0 %}
+                                ({{ cart_item_count }})
+                            {% endif %}</a>
+                        </li>
                     {% endif %}
                     <li><a href="{% url 'me' %}" class="profile-link">{{ user.username }}</a></li>
                     <li><a href="{% url 'logout' %}">Выход</a></li>
