order detail styles was added

--- a/project/templates/orders/order_detail.html
+++ b/project/templates/orders/order_detail.html
@@ -2,23 +2,27 @@
 {% load static %}
 
 {% block content %}
-  <div class="order-detail">
-    <h2>Детали заказа #{{ order.id }}</h2>
+  <div class="order-detail-wrapper">
+    <div class="order-detail">
+      <h2>Детали заказа #{{ order.id }}</h2>
 
-    <p><strong>Пользователь:</strong> {{ order.user }}</p>
-    <p><strong>Магазин:</strong> {{ order.shop }}</p>
-    <p><strong>ПВЗ:</strong> {{ order.pickup_point }}</p>
-    <p><strong>Сумма:</strong> {{ order.total_price }} ₽</p>
-    <p><strong>Текущий статус:</strong> {{ order.get_status_display }}</p>
-    <p><strong>Оплачен:</strong> {{ order.is_paid }}</p>
+      <div class="order-info">
+        <p><strong>Пользователь:</strong> {{ order.user }}</p>
+        <p><strong>Магазин:</strong> {{ order.shop }}</p>
+        <p><strong>ПВЗ:</strong> {{ order.pickup_point }}</p>
+        <p><strong>Сумма:</strong> {{ order.total_price }} ₽</p>
+        <p><strong>Текущий статус:</strong> {{ order.get_status_display }}</p>
+        <p><strong>Оплачен:</strong> {{ order.is_paid }}</p>
+      </div>
 
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Обновить статус</button>
-    </form>
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Обновить статус</button>
+      </form>
 
-    <a href="{% url 'my-pp' %}">⬅ Назад к списку заказов</a>
+      <a href="{% url 'my-pp' %}">⬅ Назад к списку заказов</a>
+    </div>
   </div>
 {% endblock %}
 
